# static_analysis

./: README.md  program.txt  project.cabal
src/: Abstraction.hs  ConstantSetAbstraction.hs  IntervalAbstraction.hs  Language.hs  Main.hs  Memory.hs  SignAbstraction.hs
test/: IntervalAbstractionSpec.hs  LanguageSpec.hs  SignAbstractionSpec.hs  Spec.hs
test-programs/: ex07.txt
